--- a/index.html
+++ b/index.html
@@ -72,10 +72,23 @@
 
         </section>
         <div class="story__pictures">
-            story pictures
+
         </div>
         <div class="story__content">
-            story content
+            <h3 class="heading-3 mb-sm">
+                happy customers
+            </h3>
+            <h2 class="heading-2 heading-2-dark mb-md">
+               &ldquo; the best decision of ou lives&rdquo;
+            </h2>
+            <p class="story__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur distinctio necessitatibus pariatur voluptatibus.
+                Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">
+                find your own home
+            </button>      
         </div>
         <section class="homes">
             homes
