--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         </section>
         <div class="story__pictures">
-
+            <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="new house" class="story__img--2">
         </div>
         <div class="story__content">
             <h3 class="heading-3 mb-sm">
